<resources>
    <string name="app_name">SeaGuard</string>
    <string name="title_home">Home</string>
    <string name="title_reports">Segnalazioni</string>
    <string name="title_explore">Scopri</string>
    <string name="title_settings">Impostazioni</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_report">Segnalazione</string>
    <string name="title_profile">Profilo</string>
    <string name="title_notifications">Notifiche</string>
    <string name="title_info">Informativa sulla Privacy</string>
    <string name="title_urgency">Pericolo</string>
    <string name="title_description">Descrizione</string>
    <string name="title_category">Categoria</string>
    <string name="title_entity">Ente Assegnato</string>
    <string name="title_comments">Commenti degli altri Utenti</string>
    <string name="title_your_comment">Lascia un Commento</string>
    <string name="title_utility">Utilità della Segnalazione</string>
    <string name="title_info_privacy">Informativa sulla Privacy</string>
    <string name="prompt_name">Nome</string>
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_confirm_password">Conferma Password</string>
    <string name="prompt_old_password">Vecchia Password</string>
    <string name="prompt_new_password">Nuova Password</string>
    <string name="confirm_password_change">Cambia Password</string>
    <string name="update_password">Cambia</string>
    <string name="action_sign_in">Accedi</string>
    <string name="action_sign_up">Registrami</string>
    <string name="action_sign_in_short">Accedi</string>
    <string name="action_logout">Logout</string>
    <string name="action_search">Cerca</string>
    <string name="welcome">"Benvenuto in SeaGuard"</string>
    <string name="registration">"Registrati in SeaGuard"</string>
    <string name="invalid_username">Username non valido</string>
    <string name="invalid_password">Password must be >5 characters</string>
    <string name="login_failed">"Login fallito"</string>
    <string name="sign_up_failed">"Registrazione fallita"</string>
    <string name="register_link">"Non hai un account? Registrati"</string>
    <string name="add_report">Segnala</string>
    <string name="incomplete_fields">Campi incompleti</string>
    <string name="gps_network_not_enabled">Localizzazione non attiva</string>
    <string name="open_location_settings">Apri le impostazioni</string>
    <string name="save">Salva</string>
    <string name="confirm">OK</string>
    <string name="cancel">Annulla</string>
    <string name="urgency">Pericolo</string>
    <string name="upload_photos">Carica</string>
    <string name="menu_categories">Categoria</string>
    <string name="menu_nationalities">Nazionalità</string>
    <string name="loading_error">Si è verificato un errore durante il caricamento</string>
    <string name="error_while_saving">Errore durante il salvataggio</string>
    <string name="upload_photo_status">Nessuna foto</string>
    <string name="report_saved">Segnalazione salvata</string>
    <string name="comment_saved">Commento salvato</string>
    <string name="location_error">Impossibile rilevare la posizione</string>
    <string name="categories_error">Impossibile caricare le categorie</string>
    <string name="pick_image">Seleziona una Foto</string>
    <string name="photo_uploaded">Foto allegata</string>
    <string name="photo_upload_error">Errore durante il salvataggio della Foto</string>
    <string name="failed_auth">Autenticazione fallita</string>
    <string name="invalid_credentials">Campi NON validi</string>
    <string name="profile_updated">Profilo aggiornato</string>
    <string name="post">Pubblica</string>
    <string name="urgency_format">%1$s / 5</string>
    <string name="timeAndDate_format">%1$s alle %2$s</string>
    <string name="hint_comment">Commento</string>
    <string name="no_data">Nessun elemento disponibile</string>
    <string name="informativa">
        Informativa sulla Privacy e Cookie Policy
        1. Introduzione
        Questa informativa descrive come raccogliamo, utilizziamo e proteggiamo i tuoi dati personali quando utilizzi l’applicazione Seaguard. L’uso dell’app implica l’accettazione della presente informativa.
        2. Titolare del trattamento
        Il titolare del trattamento dei dati è Seaguard, contattabile via email a seaguard@gmail.com.
        3. Dati raccolti
        L’app raccoglie i seguenti dati personali:
        Dati di registrazione: Nome, cognome, email, password.
        Dati di localizzazione: Posizione GPS per segnalazioni e notifiche.
        Dati relativi alle segnalazioni: Descrizione, immagini e posizione degli eventi segnalati.
        Dati di utilizzo: Informazioni su come utilizzi l’app per migliorare i servizi.
        4. Finalità del trattamento
        I dati vengono utilizzati per:
        Consentire la registrazione e l’uso dell’app.
        Mostrare segnalazioni su una mappa.
        Inviare notifiche su eventi rilevanti.
        Gestire la sicurezza dell’account.
        Rispettare obblighi legali e rispondere a richieste delle autorità.
        5. Base giuridica del trattamento
        Il trattamento dei dati si basa su:
        Esecuzione di un contratto (uso dell’app).
        Interesse legittimo (prevenzione di abusi, miglioramento dei servizi).
        Consenso esplicito (per dati di localizzazione e notifiche push).
        6. Conservazione dei dati
        I dati vengono conservati per il tempo necessario a fornire il servizio e per adempiere agli obblighi di legge. Le segnalazioni vengono automaticamente rimosse dopo 7 giorni.
        7. Condivisione dei dati
        I dati possono essere condivisi con:
        Autorità competenti in caso di richieste legali.
        Fornitori di servizi terzi (hosting, gestione dati) che trattano i dati in conformità al GDPR.
        Altri utenti dell’app per visualizzare le segnalazioni.
        8. Sicurezza dei dati
        Adottiamo misure di sicurezza tecniche e organizzative per proteggere i tuoi dati da accessi non autorizzati.
        9. Diritti dell’utente
        Puoi esercitare i seguenti diritti:
        Accesso ai dati.
        Rettifica o cancellazione dei dati.
        Limitazione o opposizione al trattamento.
        Portabilità dei dati.
        Per esercitare i tuoi diritti, contattaci a [email].

        Cookie Policy
        L’app utilizza cookie e tecnologie simili per migliorare l’esperienza utente.
        1. Cosa sono i cookie?
        I cookie sono piccoli file di testo salvati sul tuo dispositivo per migliorare la navigazione.
        2. Tipologie di cookie utilizzati
        Cookie tecnici: Necessari per il funzionamento dell’app.
        Cookie analitici: Raccolgono dati anonimi sulle interazioni con l’app.
        Cookie di terze parti: Utilizzati da servizi esterni (es. Google Analytics, Firebase).
        3. Gestione dei cookie
        Puoi disattivare i cookie nelle impostazioni del dispositivo, ma alcune funzionalità potrebbero non funzionare correttamente.
    </string>
</resources>