<?xml version="1.0" encoding="utf-8"?>
    <androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:background="?attr/colorPrimary"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.auth.LoginActivity">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical"
            android:padding="@dimen/activity_vertical_margin">

            <!-- Welcome text -->
            <TextView
                android:id="@+id/welcome_text"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/registration"
                android:textSize="42sp"
                android:textStyle="bold"
                android:gravity="center"
                android:textColor="?attr/colorPrimaryVariant"
                android:layout_marginTop="32dp"
                android:layout_marginBottom="20dp"
                android:layout_gravity="center" />

            <!-- Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/name_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxStrokeColor="?attr/colorOnPrimary"
                app:boxBackgroundMode="filled"
                app:hintTextColor="@color/purple_500"
                app:boxCornerRadiusTopStart="@dimen/radius"
                app:boxCornerRadiusTopEnd="@dimen/radius"
                app:boxCornerRadiusBottomStart="@dimen/radius"
                app:boxCornerRadiusBottomEnd="@dimen/radius"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:hint="@string/prompt_name"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/username_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxStrokeColor="?attr/colorOnPrimary"
                app:boxBackgroundMode="filled"
                app:hintTextColor="@color/purple_500"
                app:boxCornerRadiusTopStart="@dimen/radius"
                app:boxCornerRadiusTopEnd="@dimen/radius"
                app:boxCornerRadiusBottomStart="@dimen/radius"
                app:boxCornerRadiusBottomEnd="@dimen/radius"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:hint="@string/prompt_email"
                android:inputType="textEmailAddress"
                android:selectAllOnFocus="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/username"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxStrokeColor="?attr/colorOnPrimary"
                app:boxBackgroundMode="filled"
                app:hintTextColor="@color/purple_500"
                app:boxCornerRadiusTopStart="@dimen/radius"
                app:boxCornerRadiusTopEnd="@dimen/radius"
                app:boxCornerRadiusBottomStart="@dimen/radius"
                app:boxCornerRadiusBottomEnd="@dimen/radius"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:hint="@string/prompt_password"
                android:imeOptions="actionDone"
                android:selectAllOnFocus="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:backgroundTint="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Confirm Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/confirm_password_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxStrokeColor="?attr/colorOnPrimary"
                app:boxBackgroundMode="filled"
                app:hintTextColor="@color/purple_500"
                app:boxCornerRadiusTopStart="@dimen/radius"
                app:boxCornerRadiusTopEnd="@dimen/radius"
                app:boxCornerRadiusBottomStart="@dimen/radius"
                app:boxCornerRadiusBottomEnd="@dimen/radius"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="16dp"
                android:layout_marginLeft="12dp"
                android:layout_marginRight="12dp"
                android:hint="@string/prompt_confirm_password"
                android:imeOptions="actionDone"
                android:selectAllOnFocus="true">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPassword"
                    android:backgroundTint="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Sign Up Button -->
            <Button
                android:id="@+id/signUp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/action_sign_up"
                android:layout_marginTop="30dp"
                android:backgroundTint="@color/taupe_gray"
                android:textColor="@color/white"
                android:layout_gravity="center" />

            <!-- ProgressBar -->
            <ProgressBar
                android:id="@+id/loading"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_gravity="center"
                android:layout_marginTop="10dp" />

        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>
