<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ui.settings.ProfileActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:elevation="4dp"
        app:title="@string/title_profile"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="?attr/colorPrimary"
        app:menu="@menu/toolbar" />

        <ScrollView
        android:id="@+id/scrollView"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:padding="16dp"
            android:layout_marginTop="@dimen/activity_vertical_margin"
            android:layout_marginStart="@dimen/activity_horizontal_margin"
            android:layout_marginEnd="@dimen/activity_horizontal_margin"
            android:layout_marginBottom="@dimen/activity_vertical_margin">

            <!-- Profile Avatar -->
            <ImageView
                android:id="@+id/profile_avatar"
                android:layout_width="100dp"
                android:layout_height="100dp"
                android:layout_gravity="center"
                android:layout_marginBottom="16dp"
                android:src="@drawable/avatar"
                android:contentDescription="@string/title_profile"
                android:scaleType="centerCrop" />

            <!-- Name -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxStrokeColor="?attr/colorOnPrimary"
                app:boxBackgroundMode="filled"
                app:hintTextColor="@color/purple_500"
                app:boxCornerRadiusTopStart="@dimen/radius"
                app:boxCornerRadiusTopEnd="@dimen/radius"
                app:boxCornerRadiusBottomStart="@dimen/radius"
                app:boxCornerRadiusBottomEnd="@dimen/radius"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Nome"
                    android:backgroundTint="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Email -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxStrokeColor="?attr/colorOnPrimary"
                app:boxBackgroundMode="filled"
                app:hintTextColor="@color/purple_500"
                app:boxCornerRadiusTopStart="@dimen/radius"
                app:boxCornerRadiusTopEnd="@dimen/radius"
                app:boxCornerRadiusBottomStart="@dimen/radius"
                app:boxCornerRadiusBottomEnd="@dimen/radius"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_email"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Email"
                    android:inputType="textEmailAddress"
                    android:backgroundTint="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Password -->
            <com.google.android.material.textfield.TextInputLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxStrokeColor="?attr/colorOnPrimary"
                app:boxBackgroundMode="filled"
                app:hintTextColor="@color/purple_500"
                app:boxCornerRadiusTopStart="@dimen/radius"
                app:boxCornerRadiusTopEnd="@dimen/radius"
                app:boxCornerRadiusBottomStart="@dimen/radius"
                app:boxCornerRadiusBottomEnd="@dimen/radius"
                app:passwordToggleEnabled="true"
                android:layout_marginTop="@dimen/activity_vertical_margin"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/edit_text_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="Password"
                    android:inputType="textPassword"
                    android:backgroundTint="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Nationality -->
            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/nationality"
                style="@style/Widget.MaterialComponents.TextInputLayout.FilledBox.ExposedDropdownMenu"
                android:hint="@string/menu_nationalities"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                app:boxBackgroundMode="outline"
                app:hintEnabled="true"
                app:hintAnimationEnabled="true"
                app:boxStrokeColor="?attr/colorOnPrimary"
                app:hintTextColor="@color/purple_500"
                app:boxCornerRadiusTopStart="@dimen/radius"
                app:boxCornerRadiusTopEnd="@dimen/radius"
                app:boxCornerRadiusBottomStart="@dimen/radius"
                app:boxCornerRadiusBottomEnd="@dimen/radius"
                app:startIconDrawable="@drawable/nationality"
                android:layout_marginTop="30dp"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:layout_marginBottom="@dimen/activity_vertical_margin">

                <AutoCompleteTextView
                    android:id="@+id/autoCompleteNationalities"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:labelFor="@+id/menu_nationalities"
                    android:padding="5dp"
                    android:inputType="none"
                    android:backgroundTint="@android:color/transparent" />
            </com.google.android.material.textfield.TextInputLayout>

            <!-- Save Button -->
            <com.google.android.material.button.MaterialButton
                android:id="@+id/button_save_profile"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:backgroundTint="@color/taupe_gray"
                android:textColor="@color/white"
                android:text="@string/save"
                android:layout_marginTop="46dp"
                android:layout_marginBottom="46dp"
                android:layout_gravity="center" />
        </LinearLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>